--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
+    <title>My PWA</title>
+</head>
+<body>
+    <h1>Hello, PWA!</h1>
+    <script src="app.js"></script>
+</body>
+</html>
