--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <title>My PWA</title>
+    <title>Leafy McLeaf-Face</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <p id="loading-text">Loading</p>
     </div>
     <div id="content" style="display:none;">
-        <h1>Womp womp c:</h1>
+        <h2>Womp Womp c:</h2>
         <canvas id="temperatureChart" width="400" height="200"></canvas>
     </div>
     <script src="app.js"></script>
