--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <title>Leafy McLeaf-Face</title>
@@ -16,7 +16,7 @@
         <p id="loading-text">Loading</p>
     </div>
     <div id="content" style="display:none;">
-        <h2>Tempuru-ature</h2>
+        <h2>Tempuru-ture</h2>
         <div id="controls">
             <button id="zoomInButton">Zoom In</button>
             <button id="zoomOutButton">Zoom Out</button>
