--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <title>Leafy McLeaf-Face</title>
+    <title>Compost Temperature Measureing</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
@@ -16,7 +16,7 @@
         <p id="loading-text">Loading</p>
     </div>
     <div id="content" style="display:none;">
-        <h2>Tempuru-ture</h2>
+        <h2>Temperature Graph</h2>
         <div id="controls">
             <button id="zoomInButton">Zoom In</button>
             <button id="zoomOutButton">Zoom Out</button>
